Added support for local database
Changed Appsettings and startup to accomodate a local, but project-specific database.

--- a/EchoTable/appsettings.json
+++ b/EchoTable/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PopoErEnLuderContext": "Server=(localdb)\\mssqllocaldb;Database=PopoErEnLuderContext-ea01588e-cb47-458f-bf3d-24cce1ece774;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PopoErEnLuderContext": "Server=(localdb)\\mssqllocaldb;Database=PopoErEnLuderContext-ea01588e-cb47-458f-bf3d-24cce1ece774;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //This might be some of the tackiest code ever, but it seems to work.
+    "TestConnection": "Server=(localdb)\\mssqllocaldb;AttachDbFilename=[test]\\EchoTableContext.mdf;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
